# manasight-parser

./: .claudeignore  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  deny.toml  smoke-baseline.json  smoke-corpus-manifest.toml
.claude/commands/: self-review.md  smoke-test.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude-review.yml  claude.yml  gitleaks.yml  publish-crate.yml  release.yml  semgrep.yml  smoke-test.yml
src/: event_bus.rs  events.rs  lib.rs  router.rs  sanitize.rs  stream.rs  util.rs
src/log/: discovery.rs  entry.rs  mod.rs  tailer.rs  timestamp.rs
src/parsers/: api_common.rs  client_actions.rs  collection.rs  connection_close.rs  connection_error.rs  connection_state.rs  deck_collection.rs  draft.rs  event_lifecycle.rs  game_result.rs  gre.rs  inventory.rs  match_state.rs  metadata.rs  mod.rs  rank.rs  session.rs  test_helpers.rs  truncation.rs
tests/: corpus_flush_timing.rs  corpus_prev_game_state_id.rs  game_over_annotations_integration.rs  smoke_metadata.rs  smoke_parsers.rs  smoke_ratchet.rs  smoke_real_logs.rs  smoke_router.rs  smoke_stream.rs  stream_integration.rs  truncation_integration.rs
tests/fixtures/: game_over_with_damage_annotations.txt  gsm_with_turn_info.txt
tests/smoke-results/: 2026-02-26_221952_79470b8.txt  2026-02-26_222456_6a90a87.txt  2026-02-26_223935_b3b8705.txt  2026-02-26_231306_f2ddd33.txt  (+6 more)
(+13 files in other folders)
