[package]
name = "manasight-parser"
version = "0.1.0"
edition = "2021"
description = "MTG Arena log file parser — reads Player.log and emits typed game events"
license = "MIT OR Apache-2.0"
repository = "https://github.com/manasight/manasight-parser"
readme = "README.md"
rust-version = "1.93.0"
keywords = ["mtg-arena", "parser", "log", "magic-the-gathering"]
categories = ["parser-implementations", "games"]

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync", "fs", "io-util", "time", "macros"] }

[target.'cfg(target_os = "windows")'.dependencies]
known-folders = "1"

[dev-dependencies]
tempfile = "3"
toml = "0.8"

[lints.clippy]
# Pedantic lints as warnings
pedantic = { level = "warn", priority = -1 }
# Restriction lints denied
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
# Allow some pedantic lints that are too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
